[gd_scene load_steps=2 format=3 uid="uid://c8c07by0phq1i"]

[ext_resource type="Script" uid="uid://cqs5ay8r0hsur" path="res://ui/goalmenu.gd" id="1_k2bb7"]

[node name="Goalmenu" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_k2bb7")

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.1764706, 0.1764706, 0.1764706, 0.77254903)
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
alignment = 1

[node name="NextLevelButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Siguiente nivel
"

[node name="LevelSelectButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Seleccionar nivel"

[node name="MainMenuButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Menu Principal"
